Fix: activities titles and order cards on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1196,6 +1196,23 @@ img {
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
+  max-width: 200px;
+}
+
+.card__title:nth-child(1) {
+  max-width: 145px;
+}
+
+.card__title:nth-child(2) {
+  max-width: 161px;
+}
+
+.card__title:nth-child(3) {
+  max-width: 153px;
+}
+
+.card__title:nth-child(4) {
+  max-width: 200px;
 }
 
 .card__button {
@@ -1602,6 +1619,16 @@ img {
   }
   .activities {
     padding-top: 90px;
+  }
+  .activities__card:nth-child(1) {
+    -webkit-box-ordinal-group: -2;
+        -ms-flex-order: -3;
+            order: -3;
+  }
+  .activities__card:nth-child(3) {
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2;
   }
 }
 /*# sourceMappingURL=style.css.map */
