--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -297,3 +297,8 @@
       margin-right: auto
   .activities
     padding-top: 90px
+    &__card
+      &:nth-child(1)
+        order: -3
+      &:nth-child(3)
+        order: -2
