--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -49,6 +49,17 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 20px;
+    max-width: 200px
+    &:nth-child(1)
+      max-width: 145px
+    &:nth-child(2)
+      max-width: 161px
+    &:nth-child(3)
+      max-width: 153px
+    &:nth-child(4)
+      max-width: 200px
+      
+      
   &__button
     padding: 7px 22px 7px 21px
     border: none
